not released yet, but here are some changes i made from today on:

29/08/2020
- Changed how command works
- Added Nether and End voided (does not create structures yet D:)
- Config recycled and added some new configs
- Added Language German and English (might not be completed yet)