@@ -27,7 +27,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200514-1.15.1'
+    mappings channel: 'snapshot', version: "${mappings_version}"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -94,9 +94,9 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.33'
-    compileOnly fg.deobf("vazkii.botania:Botania:r1.15-389.477:api")
-    compileOnly fg.deobf("vazkii.botania:Botania:r1.15-389.477")
+    minecraft "net.minecraftforge:forge:${mc_version}-${forge}"
+    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}:api")
+    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
