@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mappings_version = 20200829-1.15.1
+mc_version = 1.15.2
+forge = 31.2.36
+botania_version = r1.15-389.477
