@@ -26,6 +26,5 @@ public class EndVoidChunkGenerator extends EndChunkGenerator {
     @Override
     public void decorate(WorldGenRegion region) {}
 
-    @Override
     public void func_225550_a_(BiomeManager biomeManager, IChunk chunkIn, GenerationStage.Carving carvingSettings) {}
 }
