@@ -32,6 +32,5 @@ public class SkyBlockChunkGenerator extends OverworldChunkGenerator {
     @Override
     public void decorate(WorldGenRegion region) {}
 
-    @Override
     public void func_225550_a_(BiomeManager biomeManager, IChunk chunkIn, GenerationStage.Carving carvingSettings) {}
 }
